@@ -12,19 +12,68 @@ public class LongitudeTest extends TestCase {
    private Longitude lon1, lon2;
 
    @Override
-   public void setUp()
-   throws GeographicCoordinateException {
-      lon1 = new Longitude( 2, 4, 6d, Longitude.Direction.EAST );
+   public void setUp() throws GeographicCoordinateException {
+      lon1 = new Longitude( 2, 4, 6.123d, Longitude.Direction.EAST );
       lon2 = new Longitude( lon1.getDegrees(), lon1.getMinutes(), lon1.getSeconds(), lon1.getDirection() );
    }
 
-   @Override
-   public void tearDown()
-   throws Exception {
+   public void testDoubleConstructor_maxValue_success() throws GeographicCoordinateException {
+      final Longitude l = new Longitude( 180 );
+
+      assertEquals( 180, l.getDegrees() );
+      assertEquals( 0, l.getMinutes() );
+      assertEquals( 0.0d, l.getSeconds() );
+      assertEquals( Longitude.Direction.EAST, l.getDirection() );
+      assertEquals( 180.0d, l.toDouble() );
    }
 
-   public void testSetDegrees_minValueSuccess()
-   throws GeographicCoordinateException {
+   public void testDoubleConstructor_maxValueExceeded_degrees() {
+      try {
+         new Longitude( 181 );
+         fail( "Expected exception" );
+      } catch( final GeographicCoordinateException e ) {
+         assertEquals( GeographicCoordinateException.Messages.LONGITUDE_DEGREES_RANGE, e.getMessage() );
+      }
+   }
+
+   public void testDoubleConstructor_maxValueExceeded_minutesSeconds() {
+      try {
+         new Longitude( -180.000000001d );
+         fail( "Expected exception" );
+      } catch( final GeographicCoordinateException e ) {
+         assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
+      }
+   }
+
+   public void testDoubleConstructor_minValue_success() throws GeographicCoordinateException {
+      final Longitude l = new Longitude( -180 );
+
+      assertEquals( 180, l.getDegrees() );  // degrees are not negative - direction indicates sign
+      assertEquals( 0, l.getMinutes() );
+      assertEquals( 0.0d, l.getSeconds() );
+      assertEquals( Longitude.Direction.WEST, l.getDirection() );
+      assertEquals( -180.0d, l.toDouble() );
+   }
+
+   public void testDoubleConstructor_minValueExceeded_degrees() {
+      try {
+         new Longitude( -181 );
+         fail( "Expected exception" );
+      } catch( final GeographicCoordinateException e ) {
+         assertEquals( GeographicCoordinateException.Messages.LONGITUDE_DEGREES_RANGE, e.getMessage() );
+      }
+   }
+
+   public void testDoubleConstructor_minValueExceeded_minutesSeconds() {
+      try {
+         new Longitude( -180.000000001d );
+         fail( "Expected exception" );
+      } catch( final GeographicCoordinateException e ) {
+         assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
+      }
+   }
+
+   public void testSetDegrees_minValueSuccess() throws GeographicCoordinateException {
       final int degrees = 0;
       final Longitude l = new Longitude();
 
@@ -42,13 +91,10 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0, l.getDegrees() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_DEGREES_RANGE, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetDegrees_maxValueSuccess()
-   throws GeographicCoordinateException {
+   public void testSetDegrees_maxValueSuccess() throws GeographicCoordinateException {
       final int degrees = 180;
       final Longitude l = new Longitude();
 
@@ -56,8 +102,7 @@ public class LongitudeTest extends TestCase {
       assertEquals( degrees, l.getDegrees() );
    }
 
-   public void testSetDegrees_maxValueFailOnMinutes()
-   throws GeographicCoordinateException {
+   public void testSetDegrees_maxValueFailOnMinutes() throws GeographicCoordinateException {
       final int mins = 1;
       final int degrees = 180;
       final Longitude l = new Longitude();
@@ -71,13 +116,10 @@ public class LongitudeTest extends TestCase {
          assertEquals( mins, l.getMinutes() );
          assertEquals( 0, l.getDegrees() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetDegrees_maxValueFailOnSeconds()
-   throws GeographicCoordinateException {
+   public void testSetDegrees_maxValueFailOnSeconds() throws GeographicCoordinateException {
       final double secs = 1.0d;
       final int degrees = 180;
       final Longitude l = new Longitude();
@@ -91,8 +133,6 @@ public class LongitudeTest extends TestCase {
          assertEquals( secs, l.getSeconds() );
          assertEquals( 0, l.getDegrees() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
@@ -106,9 +146,6 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0, l.getDegrees() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_DEGREES_RANGE, e.getMessage() );
-      } catch( final Exception e )
-      {
-         fail( "Wrong exception: " + e );
       }
    }
 
@@ -121,13 +158,10 @@ public class LongitudeTest extends TestCase {
       } catch( final IllegalArgumentException e ) {
          assertSame( bak, lon1.getDirection() );
          assertEquals( GeographicCoordinateException.Messages.DIRECTION_NULL, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetMinutes_minValueSuccess()
-   throws Exception {
+   public void testSetMinutes_minValueSuccess() throws GeographicCoordinateException {
       final int mins = 0;
       final Longitude l = new Longitude();
 
@@ -145,13 +179,10 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0, l.getMinutes() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_RANGE, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetMinutes_maxValueSuccess()
-   throws Exception {
+   public void testSetMinutes_maxValueSuccess() throws GeographicCoordinateException {
       final int mins = 59;
       final Longitude l = new Longitude();
 
@@ -169,13 +200,10 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0, l.getMinutes() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_RANGE, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetMinutes_failOnMaxDegrees()
-   throws GeographicCoordinateException {
+   public void testSetMinutes_failOnMaxDegrees() throws GeographicCoordinateException {
       final int degrees = 180;
       final int mins = 1;
       final Longitude l = new Longitude();
@@ -189,13 +217,10 @@ public class LongitudeTest extends TestCase {
          assertEquals( degrees, l.getDegrees() );
          assertEquals( 0, l.getMinutes() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetSeconds_minValueSuccess()
-   throws Exception {
+   public void testSetSeconds_minValueSuccess() throws GeographicCoordinateException {
       final double sec = 0.0d;
       final Longitude l = new Longitude();
 
@@ -213,13 +238,10 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0.0d, l.getSeconds() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_SECONDS_RANGE, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetSeconds_maxValueSuccess()
-   throws Exception {
+   public void testSetSeconds_maxValueSuccess() throws GeographicCoordinateException {
       final double sec = 59.999999999999d;
       final Longitude l = new Longitude();
 
@@ -237,13 +259,10 @@ public class LongitudeTest extends TestCase {
       } catch( final GeographicCoordinateException e ) {
          assertEquals( 0.0d, l.getSeconds() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_SECONDS_RANGE, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testSetSeconds_failOnMaxDegrees()
-   throws GeographicCoordinateException {
+   public void testSetSeconds_failOnMaxDegrees() throws GeographicCoordinateException {
       final int degrees = 180;
       final double secs = 1.0d;
       final Longitude l = new Longitude();
@@ -257,25 +276,20 @@ public class LongitudeTest extends TestCase {
          assertEquals( degrees, l.getDegrees() );
          assertEquals( 0.0d, l.getSeconds() );
          assertEquals( GeographicCoordinateException.Messages.LONGITUDE_MINUTES_AND_SECONDS_MUST_BE_ZERO, e.getMessage() );
-      } catch( final Exception e ) {
-         fail( "Wrong exception: " + e );
       }
    }
 
-   public void testToDouble_west()
-   throws GeographicCoordinateException {
+   public void testToDouble_west() throws GeographicCoordinateException {
       final Longitude l = new Longitude( 79, 59, 45.9594d, Longitude.Direction.WEST );
       assertEquals( -79.9961d, l.toDouble(), 0.00000016666667d );
    }
 
-   public void testToDouble_east()
-   throws GeographicCoordinateException {
+   public void testToDouble_east() throws GeographicCoordinateException {
       final Longitude l = new Longitude( 79, 59, 45.9594d, Longitude.Direction.EAST );
       assertEquals( 79.9961d, l.toDouble(), 0.00000016666667d );
    }
 
-   public void testDoubleConstructor_west()
-   throws GeographicCoordinateException {
+   public void testDoubleConstructor_west() throws GeographicCoordinateException {
       final Longitude l = new Longitude( -79.9961d );
 
       assertEquals( 79, l.getDegrees() );
@@ -284,8 +298,7 @@ public class LongitudeTest extends TestCase {
       assertEquals( Longitude.Direction.WEST, l.getDirection() );
    }
 
-   public void testDoubleConstructor_east()
-   throws GeographicCoordinateException {
+   public void testDoubleConstructor_east() throws GeographicCoordinateException {
       final Longitude l = new Longitude( 79.9961d );
 
       assertEquals( 79, l.getDegrees() );
@@ -294,8 +307,7 @@ public class LongitudeTest extends TestCase {
       assertEquals( Longitude.Direction.EAST, l.getDirection() );
    }
 
-   public void testEquals_equalToOther()
-   throws GeographicCoordinateException {
+   public void testEquals_equalToOther() throws GeographicCoordinateException {
       final Longitude l2 = new Longitude( lon1.getDegrees(), lon1.getMinutes(), lon1.getSeconds(), lon1.getDirection() );
       assertEquals( lon1, l2 );
    }
@@ -304,36 +316,31 @@ public class LongitudeTest extends TestCase {
       assertEquals( lon1, lon1 );
    }
 
-   public void testEquals_failDegrees()
-   throws GeographicCoordinateException {
+   public void testEquals_failDegrees() throws GeographicCoordinateException {
       final Longitude l2 = new Longitude( lon1.getDegrees() + 1, lon1.getMinutes(), lon1.getSeconds(), lon1.getDirection() );
       assertFalse( lon1.equals(l2) );
    }
 
-   public void testEquals_failMinutes()
-   throws GeographicCoordinateException {
+   public void testEquals_failMinutes() throws GeographicCoordinateException {
       final Longitude l2 = new Longitude( lon1.getDegrees(), lon1.getMinutes() + 1, lon1.getSeconds(), lon1.getDirection() );
       assertFalse( lon1.equals(l2) );
    }
 
-   public void testEquals_failSeconds()
-   throws GeographicCoordinateException {
+   public void testEquals_failSeconds() throws GeographicCoordinateException {
       final Longitude l2 = new Longitude( lon1.getDegrees(), lon1.getMinutes(), lon1.getSeconds() + 1.0d, lon1.getDirection() );
       assertFalse( lon1.equals(l2) );
    }
 
-   public void testEquals_failDirectionDifferent()
-   throws GeographicCoordinateException {
+   public void testEquals_failDirectionDifferent() throws GeographicCoordinateException {
       final Longitude l2 = new Longitude( lon1.getDegrees(), lon1.getMinutes(), lon1.getSeconds(), Longitude.Direction.WEST );
       assertFalse( lon1.equals(l2) );
    }
 
    public void testEquals_failDifferentParentClass() {
-      assertFalse( lon1.equals(new Integer(2)) );
+      assertFalse( lon1.equals(Integer.valueOf(2)) );
    }
 
-   public void testEquals_failDifferentSiblingClass()
-   throws GeographicCoordinateException {
+   public void testEquals_failDifferentSiblingClass() throws GeographicCoordinateException {
       final Latitude latitude = new Latitude( lon1.getDegrees(), lon1.getMinutes(), lon1.getSeconds(), Latitude.Direction.NORTH );
       assertFalse( lon1.equals(latitude) );
    }
@@ -343,8 +350,7 @@ public class LongitudeTest extends TestCase {
       assertEquals( lon1.hashCode(), lon2.hashCode() );
    }
 
-   public void testHashCode_differentType()
-   throws GeographicCoordinateException {
+   public void testHashCode_differentType() throws GeographicCoordinateException {
       final Longitude lon = new Longitude();
 
       lon.setDegrees( lon1.getDegrees() );
@@ -354,20 +360,17 @@ public class LongitudeTest extends TestCase {
       assertFalse( lon1.hashCode() == lon.hashCode() );
    }
 
-   public void testHashCode_differentDegrees()
-   throws GeographicCoordinateException {
+   public void testHashCode_differentDegrees() throws GeographicCoordinateException {
       lon2.setDegrees( lon1.getDegrees() + 1 );
       assertFalse( lon1.hashCode() == lon2.hashCode() );
    }
 
-   public void testHashCode_differentMinutes()
-   throws GeographicCoordinateException {
+   public void testHashCode_differentMinutes() throws GeographicCoordinateException {
       lon2.setMinutes( lon1.getMinutes() + 1 );
       assertFalse( lon1.hashCode() == lon2.hashCode() );
    }
 
-   public void testHashCode_differentSeconds()
-   throws GeographicCoordinateException {
+   public void testHashCode_differentSeconds() throws GeographicCoordinateException {
       lon2.setSeconds( lon1.getSeconds() + 1 );
       assertFalse( lon1.hashCode() == lon2.hashCode() );
    }
@@ -379,5 +382,19 @@ public class LongitudeTest extends TestCase {
 
    public void testToRadians() {
       assertEquals( Math.toRadians(lon1.toDouble()), lon1.toRadians() );
+   }
+
+   public void testToString_east() {
+      assertEquals( "2°4'6.123\"E", lon1.toString() );
+   }
+
+   public void testToString_west() {
+      lon1.setDirection( Longitude.Direction.WEST );
+      assertEquals( "2°4'6.123\"W", lon1.toString() );
+   }
+
+   public void testToString_noTrailingZeros() throws GeographicCoordinateException {
+      lon1.setSeconds( 0 );
+      assertEquals( "2°4'0\"E", lon1.toString() );
    }
 }
